--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </header>
 
   <!-- Sección Parallax de inicio -->
-  <header class="parallax-inicio" style="background-image: url('/frontend/img/fondo1.jpg');">
+  <header class="parallax-inicio" style="background-image: url('/frontend/img/fondo.jpg');">
     <div class="content">
       <h1>Catas de Vino Únicas, Sin Salir de Casa</h1>
       <p>Vive una experiencia única con los mejores vinos.</p>
